# asamint

./: .bumpversion.cfg  .codeclimate.yml  .coveragerc  .gitignore  .pdm.toml  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  appveyor.yml  build.sh  build_ext.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: pelican.yml  pythonapp.yml
asamint/: __init__.py  api.py  binpacking.py  buildGrammar.cmd  buildGrammar.sh  cmdline.py  compu.py  config.py  dcm20.g4  exceptions.py  logger.py  parserlib.py  templates.py  utils.py  version.py
asamint/a2l/: __init__.py
asamint/adapters/: __init__.py  a2l.py  mdf.py  measurement.py  objutils.py  parsers.py  xcp.py
asamint/asam/: __init__.py  cdf.py  compu_method.py  epk.py  mdx.py  paging.py
asamint/calibration/: __init__.py  api.py  codegen.py  create_schema.py  curve_axis.py  db.py  db_model.py  dependent.py  image.py  mapfile.py  model.py  model_from_json.py  msrsw_db.py
asamint/cdf/: __init__.py  walker.py
asamint/cdf/exporter/: __init__.py  cdf_exporter.py  dcm.py  matlab.py
asamint/cdf/importer/: __init__.py  cdf_importer.py
asamint/config/: __init__.py
asamint/core/: __init__.py  abc.py  deprecation.py  exceptions.py  logging.py  models.py
asamint/cvx/: __init__.py  exporter.py  importer.py
asamint/damos/: __init__.py  dcm_exporter.py  dcm_listener.py  dcm_parser.cpp  dcm_tester.py
asamint/damos/parsers/: dcm20Lexer.py  dcm20Parser.py
asamint/data/dtds/: cdf_v2.0.0.sl.dtd  cdf_v2.0.0.sl.xsd  harmonizedObjects.xsd  mdx_v1_0_0.sl.dtd  msrsw_v222.xsd  xml.xsd
asamint/data/templates/: c_structs.h.mako  dcm.tmpl
asamint/examples/: CDF20demo.a2l  CDF20demo.apr  CDF20demo.exp  CDF20demo.hex  CDF20demo.xml  asamint_hello.py  build-sk.sh  cdf_from_xcp.cmd  cdf_from_xcp.py  cdf_from_xcp.sh  cdf_from_xcplite.cmd  cdf_from_xcplite.sh  cli_args.py  conf_can_vector.toml  conf_eth.toml  create_calparam_file.cmd  create_calparam_file.py  create_calparam_file.sh  create_mdf.cmd  create_mdf.exp  create_mdf.py  create_mdf.sh  create_mdf_file.cmd  create_mdf_file.sh  create_mdx_file.cmd  create_mdx_file.py  create_mdx_file.sh  epk_vector_style.c  example.apr  example_vec.apr  first_experiment.epj  first_experiment.exp  first_step.py  msrsw_a2l_example.a2l  msrsw_a2l_example.xml  read_epk_from_elf.py  run_measurement.py  second_step.py  seednkey.c  vector_caldata.exp  (+4 more)
asamint/examples/9Z72520S/: asamint_conf.py  asamint_hello.py
asamint/examples/A8AX_170407_150630_M_7142VAA90_2/: asamint_conf.py  asamint_hello.py
asamint/examples/DQ381 VAG Gearbox Hex A2L Full/: asamint_conf.py  asamint_hello.py
asamint/examples/PORSCHE_911_CARRERA_S_997_USA_2005/: asamint_conf.py  parameter.py
asamint/examples/VWAP/: asamint_conf.py  asamint_hello.py
asamint/examples/a2lknaller/: asamint_hello.py  mini_conf.py
asamint/examples/blueparrot/flash_emulator/: conf_eth.toml  conf_socket_can.toml  create.py  write_flash.py
asamint/examples/cdf/: CDF20Demo.hex  CDF20demo.cdfx
asamint/examples/ford fiesta 1.0 med1707 h1b1_14c204_mk/: asamint_conf.py  asamint_hello.py
asamint/examples/vector/: example_vec.apr  first_experiment.exp
asamint/examples/xcpsim2/: asamint_conf.py  asamint_hello.py
asamint/hdf5/: __init__.py  policy.py
asamint/mdf/: __init__.py
asamint/measurement/: __init__.py  convert.py  convert_orig.py  csv.py  hdf5.py  mdf.py  mdf_tester.py  perlin_noise.py
asamint/model/: model.py
asamint/model/calibration/: klasses.py
asamint/msrsw/: __init__.py  elements.py
asamint/parsers/: dcm20Lexer.py  dcm20Parser.py
asamint/scripts/: xcp_log.py
asamint/utils/: __init__.py  data.py  templates.py  xml.py
asamint/utils/optimize/: __init__.py  binpacking.py
asamint/xcp/: __init__.py  reco.py
asamint/xcp/cxx_ext/: rekorder.hpp  setup.py  test_rek.py  test_reko.cpp  wrap.cpp
asamint/xcp/cxx_ext/contrib/: endian.hpp
content/: code_rev.rst
docs/: Makefile  README.rst  api.rst  conf.py  further_readings.rst  getting_started.rst  index.rst  installation.rst  make.bat  usage.rst
docs/user_guide/: index.rst
output/: .html  archives.html  authors.html  categories.html  index.html  my-first-code-review.html  my-first-review.html  tags.html
output/author/: christoph-schueler.html
output/category/: code_review.html  review.html
output/feeds/: all.atom.xml
output/tag/: automotive.html  code.html  xcp.html
tests/: CDF20demo.a2l  CDF20demo.hex  conftest.py  test_api_stability.py  test_asam_io.py  test_binpacking.py  test_calibration.py  test_calibration_db.py  test_calibration_paging.py  test_cdf_exporter.py  test_cdf_importer.py  test_cdf_io.py  test_cdf_roundtrip.py  test_codegen.py  test_compu.py  test_csv_helpers.py  test_curve_axis.py  test_cvx.py  test_dcm_exporter.py  test_dcm_import.py  test_dcm_listener.py  test_dependent.py  test_dummy.py  test_hdf5_helpers.py  test_matlab_exporter.py  test_mc_object.py  test_mdf.py  test_mdf_ccblock.py  test_measurement_api.py  test_measurement_helpers.py  test_measurement_run.py  test_measurement_timestamp.py  test_online_calibration.py  test_parameter_cache.py  test_scripts.py  test_strict_mode.py  test_templates.py  test_utils.py  test_virtual_characteristic.py  test_walker.py  (+1 more)
tools/: README.rst  validate_mf4.py
tools/xcpdump/: README.rst  xcp.h  xcpdissect.c  xcpdump.c
