[tool.poetry]
name = "asamint"
version = "0.1.5"
description = "Integration package for ASAM related projects"
authors = ["Christoph Schueler <cpu12.gems@googlemail.com>"]
license = "GPL-2.0-or-later"
readme = "docs/README.rst"
keywords = ["automotive", "ecu", "xcp", "asam", "autosar"]
homepage = "https://github.com/christoph2/asamint"
repository = "https://github.com/christoph2/asamint"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers", "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
# build = "build_ext.py"
include = [
    { path = "asamint/data/*.*", format = "wheel" },
    { path = "asamint/data/*.*", format = "sdist" },
]


[tool.poetry.dependencies]
python = "^3.10"
asammdf = "^8.0.1"
rich = "^13.9.2"
pyxcp = "^0.22.9"
sortedcontainers = "^2.4.0"
lxml = "^5.3.0"
babel = "^2.16.0"
antlr4-python3-runtime = "^4.13.2"
antlr4-tools = "^0.2.1"
objutils = "^0.6.0"
numexpr = "^2.10.2"
pya2ldb = "^0.14.5"
h5py = "^3.13.0"
xarray = "^2025.1.2"
csvmagic = "^2.3.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
pre-commit-hooks = "^5.0.0"
pybind11 = "^2.13.6"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core>=1.0.0", "pybind11>=2.12.0", "pybind11[global]>=2.12.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
addopts = "--verbose --tb=short --junitxml=result.xml -o junit_family=xunit2"
testpaths = "asamint/tests"

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
line-length = 132
exclude = [
    ".git",
    "__pycache__",
    "__pypackages__",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".eggs",
    "_build",
    "build",
    "docs",
    "dist",
    "experimental",
    "asamint/parsers/*",
    "asamint/damos/parsers/*",
]
[tool.ruff.lint]
ignore = ["I001"]
unfixable = ["B"]

[tool.ruff.lint]
# B, C, E, F, W, T4, B9 from flake8 config
# I for isort
select = ["B", "C", "E", "F", "W", "B9", "I"]
ignore = [
    "D203", # from flake8
    "E203", # from flake8 & black compatibility
    "E266", # from flake8
    "E501", # handled by line-length
    "F401", # from flake8
    "F403", # from flake8
]
# B950 from flake8 config
# extend-select = ["B950"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.cibuildwheel]
build-verbosity = 3
#test-command = "pytest {package}/tests"

build = "cp3{10,11,12,13}-*"
skip = ["*-manylinux_i686", "*-musllinux_x86_64", "*-musllinux_i686"]
build-frontend = "build"

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]    # , "ARM64"

[tool.cibuildwheel.linux]
# archs = ["auto", "aarch64"]
archs = ["x86_64", "aarch64"]
# before-all = "yum install -y libffi openssl openssl-devel gcc libpython3-dev"
manylinux-x86_64-image = "manylinux_2_28"
